--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,3 +16,21 @@ steps:
     includeRootFolder: false
 - task: PublishBuildArtifacts@1
 - script: python -mhtmllib "naga.html"
+
+- script: |
+    pip install -r requirements.txt
+    pip install unittest-xml-reporting
+  displayName: 'Install prerequisites'
+
+- script: |
+    pushd '$(projectRoot)'
+    python -mhtmllib "1.html" test --testrunner xmlrunner.extra.djangotestrunner.XMLTestRunner --no-input
+  condition: succeededOrFailed()
+  displayName: 'Run tests'
+
+- task: PublishTestResults@2
+  condition: succeededOrFailed()
+  inputs:
+    testResultsFiles: "**/TEST-*.xml"
+    testRunTitle: 'Python $(PYTHON_VERSION)'
+
